Fixed value icon colors on tablet/desktop and value text being cut off on tablet

--- a/style.css
+++ b/style.css
@@ -1894,15 +1894,27 @@ footer a{
   }
 
   .values-icon{
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
+    width: 90px;
+    height: 90px;
+    border-radius: 90px;
   }
 
   .values-icon-small{
-    width: 68px;
-    height: 68px;
-    border-radius: 68px;
+    width: 90px;
+    height: 90px;
+    border-radius: 90px;
+    margin-top: 0;
+    border: solid 1px #dd3924;
+  }
+
+  .icon-2-small{
+    background-image: url('media/icon-arrow.svg');
+    background-size: 50%;
+  }
+
+  .icon-3-small{
+    background-image: url('media/icon-lightbulb.svg');
+    background-size: 50%;
   }
 
   .value-content{
@@ -1929,7 +1941,7 @@ footer a{
   /* PROJECTS SECTION (700-1249px) */
 
   .shape{
-    margin: -25px 0 30px 0;
+    margin: -15px 0 30px 0;
   }
 
   #projects h2{
@@ -2309,7 +2321,7 @@ footer a{
   }
 
   .shape{
-    margin-top: -65px;
+    margin-top: -35px;
   }
 
   #projects h2{
@@ -2539,9 +2551,21 @@ footer a{
   }
 
   .values-icon-small{
-    width: 68px;
-    height: 68px;
-    border-radius: 68px;
+    width: 82px;
+    height: 82px;
+    border-radius: 82px;
+    margin-top: 0;
+    border: solid 1px #dd3924;
+  }
+
+  .icon-2-small{
+    background-image: url('media/icon-arrow.svg');
+    background-size: 50%;
+  }
+
+  .icon-3-small{
+    background-image: url('media/icon-lightbulb.svg');
+    background-size: 50%;
   }
 
   .value-content{
